src/scss/main.scss
@use 'reset';
@use 'util';
@use 'config';

body {
    display: grid;
    grid-template-columns: 1fr minmax(355px, min(50%, 1000px)) 1fr;
    grid-template-rows: auto util.clamped(3em, 7em) auto;
    min-height: auto;
    background-color: lighten(config.$neutral-color, 49);
}

header {
    grid-row: 1/3;
    grid-column: 1/-1;
}

main {
    grid-column-start: 2;
    grid-row-start: 2;
    grid-row-end: -1;
}

.card {
    background-color: lighten(config.$neutral-color, 100);
    border-radius: 0.8em 0.8em 0.8em 0.8em;
    @extend .flex-col;
    @extend .align-center;
}

.card>* {
    width: 90%;
}

.logo {
    height: 3rem;
    width: 3rem;
    position: relative;
    top: -1.5rem;
}

.title {
    text-align: center;
    width: 75%;
}

.subtitle {
    margin-top: 1em;
    text-align: center;
}

.title-actions {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: min(10%, 2.4em);
    margin-bottom: 3em;
}

.bookmark {
    border-style: none;
}

.progress-info {
    display: flex;
    flex-wrap: wrap;
    margin-top: min(10%, 3.5em);
    margin-bottom: min(10%, 3.5em);
}

.progress-info>div {
    flex: 1 0 max(33%, 250px);
    text-align: center;
    margin-bottom: 2em;
}

.progress-info p:nth-child(2n) {
    margin-top: 0.5em;
}

.progress-num {
    @extend %font-300;
    font-size: 1.8rem;
}

.about {
    padding-bottom: 2em;
}

.about>*:nth-child(-n+4) {
    margin-top: 2em;
}

.pledge-card {
    padding-top: min(5%, 1.8em);
    padding-bottom: min(5%, 1.8em);
    @extend .card;
    @extend .thin-border
}

.pledge-card.disabled {
    opacity: 0.2;
}

.pledge-card>*:not(:first-child) {
    margin-top: 1.5em;
}

.pledge-card-inline-container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.pledge-card-inline-container>* {
    min-width: 150px;
}

.pledge-card-inline-container button {
    margin-top: 1.5em;
}

.pledge-card-inline-container .pledge-label {
    margin-top: 0.5em;
}

.modal-container {
    position: fixed;
    display: none;
    top: 0;
    left: 0;
    width: 100%;
    min-height: 100vh;
    background-color: rgba(0, 0, 0, 0.4);
    z-index: 10;
    overflow: auto;
    max-height: 100%;
}

.modal {
    background-color: lighten(config.$neutral-color, 100);
    width: 50%;
    max-width: 1000px;
    min-width: 355px;
    padding-top: min(5%, 1.8em);
    padding-bottom: min(5%, 1.8em);
    margin-top: min(25%, 14em);
}

.modal>*:nth-child(n+3):nth-child(-n+4) {
    margin-top: 1.2em;
}

.custom-radio input[type='radio'] {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    padding: 6px;
    background-clip: content-box;
    border: 1px solid lighten($color: config.$neutral-color, $amount: 40);
    border-radius: 50%;
    margin-right: 1em;
}

.custom-radio input[type='radio']:checked {
    background-color: config.$primary-color;
}

.custom-radio:hover input[type='radio'] {
    border-color: config.$primary-color;
}

.custom-radio:hover label {
    color: config.$primary-color;
}

.item-stat {
    min-width: unset;
}

.item-stat>span {
    margin-left: 0.5em;
}

@media screen and (min-width: 62em) {
    .bookmark {
        border-radius: 2em;
        height: 4.2em;
        background-color: #f5f4f4;

        &:hover {
            filter: opacity(0.3);
        }
    }

    .bookmark::after {
        display: inline-block;
        position: relative;
        bottom: 25px;
        content: 'Bookmark';
        vertical-align: middle;
        font-family: config.$font-name;
        font-weight: 700;
        font-size: 1.1em;
        color: config.$neutral-color;
        margin-left: 0.8em;
        margin-right: 1.5em;
    }

    .item-stat-bottom {
        display: none;
    }

    // .item-stat {
    //     display: block;
    // }
}

@media screen and (max-width: 62em) {
    .bookmark {
        background-color: lighten($color: config.$neutral-color, $amount: 100);
    }

    .item-stat {
        display: none;
    }

    .item-stat-bottom {
        display: block;
    }
}

//util classes

%font-100 {
    font-family: config.$font-name;
    font-weight: 400;
}

%font-200 {
    font-family: config.$font-name;
    font-weight: 500;
}

%font-300 {
    font-family: config.$font-name;
    font-weight: 700;
}

.text1 {
    font-size: util.clamped(1.25rem, 1.86rem);
    @extend %font-300
}

.text2 {
    font-size: util.clamped(0.9rem, 1rem);
    @extend %font-100;
    color: config.$neutral-color;
}

.text3 {
    @extend %font-300;
    font-size: 1.2em;
}

.text4 {
    @extend .text2;
    line-height: util.clamped(1.5em, 1.8em);
}

.text5 {
    @extend %font-300;
    font-size: util.clamped(0.9rem, 1.1rem);
}

.text6 {
    color: config.$primary-color;
    @extend %font-200;
    font-size: 1rem;
}

.btn1 {
    padding: 0 2.8em 0 2.8em;
    height: 4em;
    border-radius: 2em;
    font-size: 0.9em;
    border-style: none;
    cursor: pointer;
    background-color: config.$primary-color;
    color: lighten(config.$neutral-color, 100);
    @extend %font-200
}

.btn1:hover {
    background-color: darken($color: config.$primary-color, $amount: 15)
}

.card-margin-top {
    margin-top: 1.8em;
}

.thin-border {
    border-style: solid;
    border-width: 1px;
    border-color: lighten(config.$neutral-color, 40);
}

button.disabled {
    background-color: darken(config.$neutral-color, 100);
    pointer-events: none;
}

.small {
    height: 1em;
    width: 1em;
}

.margin-left-small {
    margin-left: 0.5em;
}

.active {
    border-color: config.$primary-color;
}

